--- a/src/Screen/style.css
+++ b/src/Screen/style.css
@@ -1,4 +1,5 @@
-body{margin-top:20px;
+body{
+	/* margin-top:20px; */
 background:#eee;
 }
 
@@ -331,30 +332,24 @@ background:#eee;
 	cursor: pointer;
 }
 
-div{
-/*	border-radius: 5px !important;*/
-}
 
 .support-content-comment {
 	display: flex;
   flex-direction: column-reverse;
 	padding: 0px;
 	background: none;
-	max-height: 60vh;
+	max-height: 50vh;
 	overflow-y: scroll;
 }
 
-.icon{
-	align-self: baseline;
-	width: 5%;
-	background-color: darkseagreen;
-	color: darkgreen;
-	font-weight: bold;
-	text-transform: capitalize;
-	border-radius: 50%;
-	line-height: 200%;
-	justify-self: center;
-	aspect-ratio: 1/1;
+/* Conversation Box start */
+.conversation{
+	flex-direction: column;
+	margin: 10px;
+	margin-bottom: 15px;
+	padding: 10px;
+	border-radius: 15px;
+	box-shadow: rgba(0, 0, 0, 0.1) 0px 4px 12px;
 }
 
 .support{
@@ -365,19 +360,34 @@ div{
 	background: aliceblue;
 }
 
-.conversation{
-	display: flex;
-	flex-direction: column;
-	margin: 10px;
-	margin-bottom: 15px;
-	padding: 10px;
-	border-radius: 15px;
-	box-shadow: rgba(0, 0, 0, 0.1) 0px 4px 12px;
+.conv-header{
+	display: grid;
+	grid-template-columns: repeat(12, 1fr);
+	grid-gap: 20px;
+	grid-template-rows: 40px;
 }
 
-.conversation .row{
-	display: flex;
-	margin: unset;
+.iconbg{
+	position: relative;
+	grid-column: span 1;
+	align-self: stretch;
+	justify-self: center;
+	aspect-ratio: 1/1;
+	border-radius: 50%;
+	background-color: darkseagreen;
+	color: darkgreen;
+	font-weight: bold;
+	text-transform: capitalize;
+}
+.icon{
+	position: absolute;
+	top: 50%;
+	left: 50%;
+	transform: translate(-50%,-50%);
+}
+
+.sender{
+	grid-column: span 11;
 }
 
 .responder{
@@ -388,11 +398,77 @@ div{
 	font-size: small;
 }
 
-.mailid{
-	font-size: 12px;
-	font-weight: 300;
+.conv-mail{
+	display: grid;
+	grid-template-columns: repeat(12, 1fr);
+	grid-gap: 20px;
+	margin: 10px 0;
 }
+
+.mail-icon{
+	grid-column: span 1;
+	align-self: baseline;
+	text-align: center;
+	align-self: stretch;
+	justify-self: center;
+}
+
+.mail-body{
+	grid-column: span 11;
+}
+
+/* Conversation Box end */
+
 
 .modal-body{
 	margin: 15px;
+}
+
+
+/* Attachment  */
+
+.attachment{
+	position: relative;
+	display: inline-block;
+	box-sizing: border-box;
+	min-width: 200px;
+	padding: 8px 12px;
+	border-radius: 4px;
+	background-color: #fff;
+	cursor: pointer;
+	margin: 0 8px 8px 0;
+	transition: .1s ease-in;
+	border: 1px solid #ebeff3;
+}
+
+.all-attachments{
+	width: 100%;
+	border-top: 1px solid rgb(160, 160, 160);
+	margin-top: 10px;
+	padding-top: 10px;
+}
+
+.attachwrapper{
+	word-break: break-word;
+	word-wrap: break-word;
+	display: flex;
+}
+
+.attachicon{
+	display: inline-block;
+	vertical-align: middle;
+	height: 42px;
+	cursor: pointer;
+}
+
+.filedetails{
+	margin-left: 8px;
+}
+
+.filename{
+	font-size: 12px;
+}
+
+.size{
+	font-size: 12px;
 }
