--- a/src/Screen/faq.css
+++ b/src/Screen/faq.css
@@ -1,37 +1,178 @@
-.hc-search {
-    background-color: #f3f5f7;
-    border: 1px solid #d4dce3;
-    color: #000;
-    margin-top: 20px;
-    margin-left: 460px;
-    width: 50%;
+.bg-primary-bv{
+  background-color: #182d4f !important;
 }
-.hc-search-c {
-    padding-left: 20px;
-    padding-bottom: 20px;
-  }
-.main {
-    margin: auto;
-    background-color: #fff;
-    border: 1px solid #f7dddd;
-    float: none;
-    width: 50%;
-    overflow: auto;
+.bg-secondry-bv{
+  background-color: #249182 !important;
 }
-.article-list {
-    box-shadow: rgba(0, 0, 0, 0.1) 0px 4px 12px;
+.bg-light{				
+  background-color: #3c3c3c2e !important;
 }
-.btn-primary {
-    color: #fff;
-    background-color: #28a745 !important;
-    border-color: #28a745;
+.text-dark{
+  color: #3c3c3c !important;
 }
-.cs-s h3 {
-    border-bottom: solid 5px #02b875 !important;
-  }
-.cs-s h3 a {
-    color: #000;
+.text-light{
+  color: #ffffff !important;
 }
-.ellipsis a {
-    color: #183247;
+
+.faq{
+  width: 90%;
+  max-width: 1000px;
+  margin: auto;
+  padding: 10px;
+  background: #182d4f;
+  color: #3c3c3c;
+  display: flex;
+  flex-direction: column;
+  min-height: 100vh;
+  padding-bottom: 0;
+}
+
+.faq .faqheader{
+  padding: 20px;
+  padding-top: 50px;
+  margin-bottom: 20px;
+  color: white;
+}
+
+.faq .faqheader .question{
+  font-size: xx-large;
+  font-weight: bold;
+}
+
+.searchbox{
+  margin: 30px 0;
+  background: white;
+  position: relative;
+  display: flex;
+  width: 50%;
+  justify-content: flex-start;
+  border-radius: 3px;
+  padding: 10px 15px;
+}
+
+.searchbox:focus-within{
+  box-shadow: 0px 0px 6px 4px #246991
+}
+
+.searchbox input{
+  width: 100%;
+  outline: none;
+  border: none;
+}
+
+.searchbox input :focus {
+  outline: none;
+  border: none;
+}
+
+.searchbox .inputbtn{
+  background: white;
+  position: absolute;
+  z-index: 2;
+  padding: 10px 15px;
+  top: 0;
+  right: 0;
+  color: gray;
+}
+
+.searchbox .inputbtn:active{
+  box-shadow: 0px 0px 4px #246991;
+}
+
+.ticketbtns{
+  margin-top: 20px;
+  display: flex;
+  color: white;
+  font-size: large;
+}
+
+.ticketbtn{
+  display: flex;
+  gap: 10px;
+  margin-right: 30px;
+  color: inherit;
+}
+
+.ticketbtn a, .ticketbtn a:hover{
+  color: inherit;
+}
+
+.main{
+  background: white;
+  margin: auto;
+  padding: 30px;
+  border-radius: 10px;
+  border-end-start-radius: 0;
+  border-end-end-radius: 0;
+  flex-grow: 1;
+}
+
+.main > .title{
+  font-size: x-large;
+  font-weight: bold;
+}
+
+.content{
+  margin-top: 20px;
+}
+
+.category{
+  display: grid;
+  grid-template-columns: repeat(2, 1fr);
+  column-gap: 20px;
+  row-gap: 20px;
+  margin-bottom: 30px
+}
+
+.cattitle{
+  font-size: large;
+  color: gray;
+  border-bottom: 2px solid #182d4f;
+  grid-column: span 2;
+}
+
+.folder{
+  padding: 20px;
+  /* border: 1px solid rgb(196, 193, 193); */
+  box-shadow: rgba(0, 0, 0, 0.24) 0px 3px 8px;
+
+  border-radius: 10px
+}
+
+.foldertitle{
+  font-size: 22px;
+  display: flex;
+  font-weight: 700;
+}
+
+.title{
+
+}
+
+.count{
+  margin: 0px 5px;
+  color: gray;
+}
+
+.articles{
+  margin: 15px 0px;
+}
+
+.article{
+  display: flex;
+  gap: 10px;
+  text-align: justify;
+}
+
+.liicon{
+
+}
+
+.articletitle{
+
+}
+
+.articletitle:hover{
+  text-decoration: underline;
+  color: blue;
 }
