--- a/src/Screen/faq.css
+++ b/src/Screen/faq.css
@@ -78,6 +78,12 @@
 .searchbox .inputbtn:active{
   box-shadow: 0px 0px 4px #246991;
 }
+.search-note{
+  font-size: x-large;
+  text-align: center;
+  color: #182d4f;
+  font-weight: bold;
+}
 
 .ticketbtns{
   margin-top: 20px;
