Fixed rerendring of tickets page

--- a/src/Screen/style.css
+++ b/src/Screen/style.css
@@ -327,7 +327,7 @@ background:#eee;
 
 /*Custom css*/
  .dropdown-menu{
-	 display: block
+	 display: block !important;
  }
 .filter-item{
 	display: block; 
