--- a/src/Screen/style.css
+++ b/src/Screen/style.css
@@ -4,7 +4,7 @@ background:#eee;
 }
 
 .padding {
-    padding: 10px;
+    padding: 2px;
 }
 
 /* GRID */
@@ -532,4 +532,38 @@ background:#eee;
 .view-ticket{
 	width: 100% !important;
 	padding: 0 !important;
+}
+
+.page{
+	display: flex;
+	margin-top: 10px;
+	gap: 10px;
+	justify-content: space-between;
+}
+
+.pagebtn{
+	background: white;
+	padding: 4px 8px;
+	border-radius: 4px;
+	min-width: 37px;
+	text-align: center;
+	font-weight: bold;
+	cursor: pointer;
+}
+
+.pagebtn:active{
+	box-shadow: inset 0px 0px 5px black;
+}
+
+.curr{
+	cursor: default;
+}
+.disabled:active, .curr:active{
+	box-shadow: none;
+}
+
+.disabled{
+	background-color: lightgray;
+	color: gray;
+	cursor: not-allowed;
 }
