--- a/src/App.css
+++ b/src/App.css
@@ -40,3 +40,11 @@
 *{
   transition: all 0.1s linear;
 }
+
+.dashboard-screen-card{
+	width: 500px;
+	height: 400px;
+	overflow-x: hidden;
+	overflow-y: scroll;
+	margin: auto;
+}
