--- a/src/Screen/faq.css
+++ b/src/Screen/faq.css
@@ -82,11 +82,12 @@
   display: flex;
   gap: 10px;
   margin-right: 30px;
-  color: inherit;
+  text-decoration: underline;
 }
 
-.ticketbtn a, .ticketbtn a:hover{
+.ticketbtn a, .ticketbtn a:hover, .ticketbtn:hover{
   color: inherit;
+  cursor: pointer
 }
 
 .main{
