--- a/src/Screen/style.css
+++ b/src/Screen/style.css
@@ -695,3 +695,89 @@ margin-left: 10px;
 	z-index: 10;
 	color: white;
 }
+
+/*new ticket creation editor Style*/
+#newTicketModal .modal-dialog-centered > div{
+	height: 100%;
+	display: flex;
+	flex-direction: column;
+}
+
+#newTicketModal .modal-body{
+	flex-grow: 1;
+	display: flex;
+	flex-direction: column;
+}
+
+#newTicketModal .modal-body.form-control:nth-of-type(3){
+	flex-grow: 1;
+}
+
+#newTicketModal .rdw-editor-wrapper > .rdw-editor-main{
+	height: 27vh;
+	max-height: 27vh !important;
+	overflow-y: auto;
+	border: 0.5px solid rgba(143, 142, 142, 0.253);
+	padding: 5px;
+}
+
+#newTicketModal .rdw-editor-wrapper > .rdw-editor-main .DraftEditor-root{
+	height: auto !important;
+	text-align: initial;
+}
+
+/*reply Modal*/
+.reply-modal{
+	position: absolute;
+	top: 100px;
+	left: 100px;
+	bottom: 100px;
+	right: 100px;
+	content: '';
+	background: rgba(0, 0, 0, 0.514);
+	border-radius: 20px;
+}
+
+.reply-modal>.close-reply{
+	font-weight: bold;
+	background: #182d4f;
+	position: absolute;
+	color: white;
+	width: 30px;
+	line-height: 30px;
+	text-align: center;
+	aspect-ratio: 1/1;
+	right: -15px;
+	top: -15px;
+	border-radius: 50%;
+	cursor: pointer;
+}
+
+/*View ticket*/
+
+#viewTicketModal .reply-modal{
+	display: flex;
+	flex-direction: column;
+	background: white;
+	padding: 10px;
+	box-shadow: 2px 3px 12px 1px #00000094;
+}
+
+#viewTicketModal .reply-modal>.form-group{
+	border-radius: 20px;
+	overflow: hidden;
+	flex-grow: 1;
+}
+
+#viewTicketModal .rdw-editor-wrapper > .rdw-editor-main{
+	height: 27vh;
+	max-height: 27vh !important;
+	overflow-y: auto;
+	border: 0.5px solid rgba(143, 142, 142, 0.253);
+	padding: 5px;
+}
+
+#viewTicketModal .rdw-editor-wrapper > .rdw-editor-main .DraftEditor-root{
+	height: auto !important;
+	text-align: initial;
+}
