--- a/src/Screen/style.css
+++ b/src/Screen/style.css
@@ -6,7 +6,12 @@ background:#eee;
 .padding {
     padding: 2px;
 }
-
+.container{
+	min-height: 100vh !important;
+	max-height: 100vh !important;
+	max-width: 1000px !important;
+	height: 100vh !important;
+}
 /* GRID */
 .col {
     padding: 10px 20px;
@@ -86,6 +91,10 @@ background:#eee;
 	padding: 15px 10px;
 	font-size: 1.3em;
 	line-height: 1.2em;
+	height: 100% !important;
+	overflow: hidden !important;
+	display: flex !important;
+	flex-direction: column !important;
 }
 
 .grid .grid-body h2{
@@ -199,6 +208,17 @@ background:#eee;
 .support h2,
 .support-content h2 {
 	margin-top: 5px;
+}
+
+.support-content{
+	height: 100% !important;
+}
+
+.grid-body .list-group{
+	flex-grow: 1 !important;
+	border-radius: 5px !important;
+	background: white;
+	overflow-y: auto;
 }
 
 .support-content .list-group li {
@@ -346,9 +366,9 @@ background:#eee;
 }
 
 .ticket-header{
-	display: flex;
-	justify-content: space-between;
-	align-items: center;
+	/* display: flex; */
+	/* justify-content: space-between; */
+	/* align-items: center; */
 }
 
 .ticket-status{
@@ -462,7 +482,7 @@ background:#eee;
 	margin: 0 15px 15px;
 }
 
-#viewTicketModal .modal-body{
+#viewTicket.modal-body{
 	margin: 0;
 	padding: 0;
 }
@@ -697,23 +717,23 @@ margin-left: 10px;
 }
 
 /*new ticket creation editor Style*/
-#newTicketModal .modal-dialog-centered > div{
+#newTicket.modal-dialog-centered > div{
 	height: 100%;
 	display: flex;
 	flex-direction: column;
 }
 
-#newTicketModal .modal-body{
+#newTicket.modal-body{
 	flex-grow: 1;
 	display: flex;
 	flex-direction: column;
 }
 
-#newTicketModal .modal-body.form-control:nth-of-type(3){
+#newTicket.modal-body.form-control:nth-of-type(3){
 	flex-grow: 1;
 }
 
-#newTicketModal .rdw-editor-wrapper > .rdw-editor-main{
+#newTicket.rdw-editor-wrapper > .rdw-editor-main{
 	height: 27vh;
 	max-height: 27vh !important;
 	overflow-y: auto;
@@ -721,7 +741,7 @@ margin-left: 10px;
 	padding: 5px;
 }
 
-#newTicketModal .rdw-editor-wrapper > .rdw-editor-main .DraftEditor-root{
+#newTicket.rdw-editor-wrapper > .rdw-editor-main .DraftEditor-root{
 	height: auto !important;
 	text-align: initial;
 }
@@ -752,10 +772,9 @@ margin-left: 10px;
 	border-radius: 50%;
 	cursor: pointer;
 }
-
 /*View ticket*/
 
-#viewTicketModal .reply-modal{
+#viewTicket.reply-modal{
 	display: flex;
 	flex-direction: column;
 	background: white;
@@ -763,21 +782,83 @@ margin-left: 10px;
 	box-shadow: 2px 3px 12px 1px #00000094;
 }
 
-#viewTicketModal .reply-modal>.form-group{
+#viewTicket.reply-modal>.form-group{
 	border-radius: 20px;
 	overflow: hidden;
 	flex-grow: 1;
 }
 
-#viewTicketModal .rdw-editor-wrapper > .rdw-editor-main{
-	height: 27vh;
-	max-height: 27vh !important;
+#viewTicket.rdw-editor-wrapper > .rdw-editor-main{
+	height: 65vh;
+	max-height: 65vh !important;
 	overflow-y: auto;
 	border: 0.5px solid rgba(143, 142, 142, 0.253);
 	padding: 5px;
 }
 
-#viewTicketModal .rdw-editor-wrapper > .rdw-editor-main .DraftEditor-root{
+#viewTicket.rdw-editor-wrapper > .rdw-editor-main .DraftEditor-root{
 	height: auto !important;
 	text-align: initial;
+}
+
+/* Error modal  */
+#error-modal-backdrop{
+	position: fixed;
+	top: 0;
+	bottom: 0;
+	left: 0;
+	right: 0;
+	width: 100%;
+	height: 100%;
+	z-index: 1500;
+	background: #0000005c;
+	display: flex;
+	justify-content: center;
+	align-items: center;
+}
+
+.error-modal{
+	width: 30%;
+	background: white;
+	max-width: 50%;
+	height: 20%;
+	border-radius: 10px;
+	padding: 10px;
+	display: flex;
+	flex-direction: column;
+	font-size: 2vh;
+}
+
+.error-modal-body{
+	text-align: center;
+	flex-grow: 1;
+	display: flex;
+	align-items: center;
+	justify-content: center;
+	color: red;
+	background: white;
+	font-size: 1em;
+}
+
+.error-modal-footer{
+	display: flex;
+	justify-content: space-around;
+	grid-gap: 15px;
+	gap: 15px;
+	font-size: 1em;
+}
+
+.footer-button{
+	width: 50%;
+	padding: 5px 10px;
+	text-align: center;
+	color: white;
+	background: #182d4f;
+	box-shadow: 2px 2px 3px 0px #00000075;
+	transition: all .05s ease-in;
+}
+
+.footer-button:active{
+	box-shadow: none;
+	transform: translate(2px ,2px);
 }
