--- a/src/Screen/style.css
+++ b/src/Screen/style.css
@@ -269,6 +269,13 @@ background:#eee;
 .support-content-comment {
 	padding: 10px 10px 10px 30px;
 	background: #eee;
+	display: flex;
+  flex-direction: column-reverse;
+	padding: 0px;
+	max-height: 80vh;
+	max-width: 50vw;
+	margin: auto;
+	overflow-y: scroll;
 }
 
 
@@ -375,13 +382,7 @@ background:#eee;
 	margin-left: 10px;
 }
 
-.support-content-comment {
-	display: flex;
-  flex-direction: column-reverse;
-	padding: 0px;
-	max-height: 60vh;
-	overflow-y: scroll;
-}
+
 
 /* Conversation Box start */
 .conversation{
@@ -652,6 +653,7 @@ margin-left: 10px;
 
 .attachment-container {
 	display: flex !important;
+	flex-wrap: wrap;
 }
 
 .attachment-selected{
@@ -774,7 +776,7 @@ margin-left: 10px;
 }
 /*View ticket*/
 
-#viewTicket.reply-modal{
+#viewTicket .reply-modal{
 	display: flex;
 	flex-direction: column;
 	background: white;
@@ -782,13 +784,13 @@ margin-left: 10px;
 	box-shadow: 2px 3px 12px 1px #00000094;
 }
 
-#viewTicket.reply-modal>.form-group{
+#viewTicket .reply-modal>.form-group{
 	border-radius: 20px;
 	overflow: hidden;
 	flex-grow: 1;
 }
 
-#viewTicket.rdw-editor-wrapper > .rdw-editor-main{
+#viewTicket .rdw-editor-wrapper > .rdw-editor-main{
 	height: 65vh;
 	max-height: 65vh !important;
 	overflow-y: auto;
@@ -796,7 +798,7 @@ margin-left: 10px;
 	padding: 5px;
 }
 
-#viewTicket.rdw-editor-wrapper > .rdw-editor-main .DraftEditor-root{
+#viewTicket .rdw-editor-wrapper > .rdw-editor-main .DraftEditor-root{
 	height: auto !important;
 	text-align: initial;
 }
